[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = {version="1", features = ["full"]}
thiserror = "1"